Full V2 with 3-tier arch

--- a/templates/v2/base2.html
+++ b/templates/v2/base2.html
@@ -48,7 +48,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/v2/report/">Report</a>
+                        <a class="nav-link" href="/v2/attendance/report/">Report</a>
                     </li>
 
                 </ul>
